# weibo-ota-monitor

./: .env.example  .gitignore  README.md  config.py  extractor.py  llm_summarizer.py  ocr_engine.py  ota_monitor.py  pyproject.toml  requirements.txt  weibo_fetcher.py  writer.py  竞品OTA微博爬取.py
.github/workflows/: ci.yml
tests/: test_extractor.py  test_weibo_fetcher.py
