[project]
name = "weibo-ota-monitor"
version = "0.2.0"
description = "竞品OTA微博监控 — 抓取、OCR、LLM总结"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "Pillow>=10.0.0",
    "beautifulsoup4>=4.12.0",
    "rapidocr-onnxruntime>=1.3.0",
    "openai>=1.30.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
